--- a/Project.toml
+++ b/Project.toml
@@ -1,19 +1,18 @@
 name = "KnetMetrics"
 uuid = "33081891-0f5e-47f5-81c7-76d5d1fed490"
 authors = ["Emirhan Kurtuluş <emirhankurtulus422@gmail.com>"]
-version = "0.2.0"
+version = "0.3.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
+[compat]
+julia = "1.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
-
-[compat]
-Plots = "1.7, 1.8, 1.9"
-julia = "1.0"
